maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:58: error: value state is not a member of Unit
possible cause: maybe a semicolon is missing before `value state'?
                 } state = 1; // switch with the leftFollowerMode
                   ^