maze.pledge.PledgeMaze.scala.code
// this method works
def isWallAtLeft () : Boolean = {
  left();
  var answer = isFacingWall();
  right();
  return answer;
}

// this one is unnecessary
def isDirectionFree (direction : Direction) : Boolean = {
  var pos = getDirection();
  setDirection(direction);
 	var answer = !isFacingWall();
  setDirection(pos); // bring back to the initial position
  return answer;
}

// convoluted with staying the wall at the left and refresh sommeAngle's state
def leftFollowerMode(sommeAngle : Int) : Int = {
  var x = sommeAngle;
  while ((getDirection() != Direction.NORTH) || isFacingWall()) {
     if (!isFacingWall()) {
     	forward();
      if (!isWallAtLeft()) {
    	 	left();
        x += 1;
        forward();
        if (!isWallAtLeft()) {
      	  left();
          x += 1;
          forward();
        }
      }
     } else { right(); x -= 1;} 
  } ; return x;
}

// this method works
def northRunnerMode () {
	while (getDirection() != Direction.NORTH) { // auto-orientation
  	right();
  }
  while (!isFacingWall()) { // forward as long is possible 
  	forward();
  }
}

def makeMoving() {
  var state = 0;
  var sommeAngle = 0;
  var numberOfAppeals = 0;
  while (!isOverBaggle()) {
    state match {
      case 0 => if (numberOfAppeals == 0 || sommeAngle != 0) { // if we didn't made a loop before or if it's the first turn
        						northRunnerMode(); // while we don't find a wall at the north
        						numberOfAppeals = 1;
     						} state = 1; // switch with the leftFollowerMode
      case 1 =>  while (!isWallAtLeft()) { 
        						right(); // make sure that there is a wall on the left before run the leftFollower mode
      					 }; sommeAngle = leftFollowerMode(sommeAngle); state = 0;
      case _ => println("Error : this case should not happen.")
    }
  }
  pickupBaggle();
}

override def run() { 
	makeMoving();
}